--- a/public-html/jeremy-gauthier/jg.html
+++ b/public-html/jeremy-gauthier/jg.html
@@ -11,10 +11,11 @@
     <meta name="keywords" content="">
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/trombi.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/trombi.css">
+    <link rel="stylesheet" href="../css/jg.css">
     <!-- Script: Navbar on-top -->
-    <script src="js/navbar-ontop.js"></script>
+    <script src="../js/navbar-ontop2.js"></script>
 </head>
 
 <body>
@@ -36,7 +37,7 @@
             </div>
         </div>
     </nav>
-    <!-- Navbar end -->
+
     <!-- First section -->
     <div class="py-5 text-center cover d-flex flex-column bg-dark text-white">
         <div class="container my-auto">
@@ -44,7 +45,7 @@
                 <div class="mx-auto col-lg-6 col-md-8">
                     <h1 class="display-1 mb-0 mt-5 big-title">Smpln</h1>
                     <h3 class="mb-4"><b>Ecole Simplon Roanne</b></h3>
-                    <p>Simplon Roanne est un projet initié par Onevalue en partenarait avec Roannais Agglomération, notre école est hébergée au Numériparc, au plus proche des entreprises de la filière numérique.
+                    <p> test2 Simplon Roanne est un projet initié par Onevalue en partenarait avec Roannais Agglomération, notre école est hébergée au Numériparc, au plus proche des entreprises de la filière numérique.
                         <br>Nous proposons des formations en développement web, gratuites et intensives.</p>
                 </div>
             </div>
@@ -76,91 +77,13 @@
         </div>
     </div>
     <!-- End first section -->
-    <!-- Trombinoscope -->
-    <div class="py-5 text-center" id="team">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12"> </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="mb-4">Promotion Roanne _01</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 px-4 mb-4 col-6 px-lg-5">
-                    <!-- Edit your avatar here-->
-                    <a href="jeremy-gauthier/jg.html">
-                        <div class="card project">
-                            <img id="jg" class="card-img rounded-circle" src="assets/team/JG.png" alt="Card image">
-                            <div class="card-body p-0">
-                                <p class="mt-3 mb-1"><b>Jeremy Gauthier</b></p>
-                                <p class="text-muted m-0"><small>Your job</small></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- End avatar -->
-                <!-- Remove unnessary html tags -->
-                <div class="col-md-4 px-4 mb-4 col-6 px-lg-5">
-                    <a data-toggle="modal" data-target=".cyan" href="">
-                        <div class="card project">
-                            <img class="card-img rounded-circle" src="assets/team/cyan.jpg" alt="Card image">
-                            <div class="card-body p-0">
-                                <p class="mt-3 mb-1"><b>Cyan</b></p>
-                                <p class="text-muted m-0"><small>Managing Partner</small></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 px-4 mb-4 col-6 px-lg-5">
-                    <a data-toggle="modal" data-target=".red" href="">
-                        <div class="card project">
-                            <img class="card-img rounded-circle" src="assets/team/red.jpg" alt="Card image">
-                            <div class="card-body p-0">
-                                <p class="mt-3 mb-1"><b>Red</b></p>
-                                <p class="text-muted m-0"><small>VP</small></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 px-4 mb-4 col-6 px-lg-5">
-                    <a data-toggle="modal" data-target=".purple" href="">
-                        <div class="card project">
-                            <img class="card-img rounded-circle" src="assets/team/purple.jpg" alt="Card image">
-                            <div class="card-body p-0">
-                                <p class="mt-3 mb-1"><b>Purple</b></p>
-                                <p class="text-muted m-0"><small>CFO</small></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 px-4 mb-4 col-6 px-lg-5">
-                    <a data-toggle="modal" data-target=".white" href="">
-                        <div class="card project">
-                            <img class="card-img rounded-circle" src="assets/team/white.jpg" alt="Card image">
-                            <div class="card-body p-0">
-                                <p class="mt-3 mb-1"><b>White</b></p>
-                                <p class="text-muted m-0"><small>Consultant</small></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 px-4 mb-4 col-6 px-lg-5">
-                    <a data-toggle="modal" data-target=".blue" href="">
-                        <div class="card project">
-                            <img class="card-img rounded-circle" src="assets/team/blue.jpg" alt="Card image">
-                            <div class="card-body p-0">
-                                <p class="mt-3 mb-1"><b>Blue</b></p>
-                                <p class="text-muted m-0"><small>Field Researcher</small></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
+
+    <div class="cimage">
+        <img id="jg2" src="../assets/team/JG.png" alt="Card image">
+
+
     </div>
-    <!-- End trombinoscope -->
+
     <!-- Footer -->
     <div class="text-white bg-dark" id="contact">
         <div class="container">
@@ -205,7 +128,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Script: Smooth scrolling between anchors in the same page -->
-    <script src="js/smooth-scroll.js"></script>
+    <script src="../js/smooth-scroll.js"></script>
 </body>
 
 </html>
